@startuml
skinparam linetype ortho
skinparam ranksep 120
skinparam nodesep 80

package "BUSINESS LAYER" as BL {

  class DebeziumMessageListener {
      +handler(Message<?> message) : Void
      -WorkerService workerService
  }

  class WorkerService {
      +execute(WorkerRequest input) : Void
      -RabbitMqPublisher rabbitMqPublisher
  }

  class RabbitMqPublisher {
      +publish(String exchange, String routingKey,
               WorkerRequest input, CorrelationData correlationData) : void
      -RabbitTemplate rabbitTemplate
  }

  DebeziumMessageListener --> WorkerService
  WorkerService --> RabbitMqPublisher
}

package "DOMAIN LAYER" as DL {

  enum OutboxStatus {
      PENDING
      SENT
  }

  enum EventType {
      SUCCESS
      FAILURE
  }

  class OrderOutboxEntity {
      +Long orderId
      +UUID sagaId
      +EventType eventType
      +OutboxStatus status
      +String apiKey
      +String productDesc
      +BigDecimal amount
      +Long amountTaxFree
      +LocalDateTime createdAt
  }

  class WorkerRequest {
      +Long id
      +UUID sagaId
      +EventType eventType
      +OutboxStatus status
      +String apiKey
      +String productDesc
      +BigDecimal amount
      +long amountTaxFree
      +long createdAt
  }

  class OrderOutboxRecord {
      +Long orderId()
      +UUID sagaId()
      +EventType eventType()
      +OutboxStatus status()
      +String apiKey()
      +String productDesc()
      +BigDecimal amount()
      +long amountTaxFree()
      +long createdAt()
  }

  WorkerRequest -down-> EventType
  OrderOutboxRecord -down-> EventType
  OrderOutboxEntity -down-> EventType

  WorkerRequest -down-> OutboxStatus
  OrderOutboxRecord -down-> OutboxStatus
  OrderOutboxEntity-down-> OutboxStatus
}

BL -[hidden]down-> DL

@enduml